# besynx

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: package-lock.json
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
crypto/: Cargo.toml
daemon/: Cargo.toml
daemon/migrations/: 20260715000000_init.sql  20260717000000_cookies.sql  20260717010000_idx_history_device_timestamp.sql
daemon/src/: crypto.rs  main.rs
extension/: background.js  manifest.json  options.html  options.js
protocol/: Cargo.toml
protocol/src/: lib.rs
